--- a/source/blocks/header/header.scss
+++ b/source/blocks/header/header.scss
@@ -31,11 +31,11 @@
     justify-content: center;
     align-items: center;
     margin-left: auto;
-    background: $color-grad_prim;
+    background: $gradient_first;
     background-clip: text;
     -webkit-text-fill-color: transparent; // WebKit only
     border: 0;
-    color: $color_prim;
+    color: $color_first;
     outline: none;
     cursor: pointer;
 
@@ -44,7 +44,7 @@
     }
 
     &:focus {
-      box-shadow: 0 0 0.1rem 0.1rem $color_prim;
+      box-shadow: 0 0 0.1rem 0.1rem $color_first;
     }
 
     &:hover {
@@ -128,11 +128,11 @@
     cursor: pointer;
 
     &:focus {
-      box-shadow: 0 0 0.1rem 0.1rem $color_prim;
+      box-shadow: 0 0 0.1rem 0.1rem $color_first;
     }
 
     &:hover {
-      color: $color_prim;
+      color: $color_first;
       opacity: 0.5;
     }
 
@@ -159,7 +159,7 @@
     width: max-content;
     min-width: 100%;
     padding: 0 1rem;
-    background: $color_back;
+    background: $color_background;
     border-radius: 0.4rem;
     box-shadow: 0 0.5rem 0.5rem $color_main-10;
     list-style: none;
