Improve the use of js prefixes in CSS classes (#8)

--- a/source/blocks/card-book/card-book.scss
+++ b/source/blocks/card-book/card-book.scss
@@ -56,7 +56,7 @@
     line-height: 2rem;
   }
 
-  &__header-room-price {
+  &__header &__room-price {
     font-size: $font-size_body;
     font-weight: bold;
   }
