--- a/source/blocks/card-book/card-book.pug
+++ b/source/blocks/card-book/card-book.pug
@@ -17,10 +17,15 @@ mixin card-book(options = {})
     const blockName = 'card-book';
     const wrapperClass = [blockName, `js-${blockName}`];
     const formClass = [`${blockName}__form`, `js-${blockName}__form`];
-    const roomNumberClass = [`${blockName}__header-room-number`];
-    const roomTypeClass = [`${blockName}__header-room-type`];
-    const roomPriceClass = [`${blockName}__header-room-price`, `js-${blockName}__room-price`];
+    const roomPriceClass = [`${blockName}__room-price`, `js-${blockName}__room-price`];
     const formItemClass = [`${blockName}__form-item`, `js-${blockName}__form-item`];
+    const dropdownDateClass = [`${blockName}__dropdown-date`, `js-${blockName}__dropdown-date`];
+    const roomDaysClass = [`${blockName}__room-days`, `js-${blockName}__room-days`];
+    const roomPriceTotalClass = [`${blockName}__room-price-total`, `js-${blockName}__room-price-total`];
+    const discountClass = [`${blockName}__discount`, `js-${blockName}__discount`];
+    const servicePriceClass = [`${blockName}__service-price`, `js-${blockName}__service-price`];
+    const addServicePriceClass = [`${blockName}__addservice-price`, `js-${blockName}__addservice-price`];
+    const totalPriceClass = [`${blockName}__total-price`, `js-${blockName}__total-price`];
 
   div(
     class=wrapperClass,
@@ -35,20 +40,20 @@ mixin card-book(options = {})
       div(class=`${blockName}__header`)
         span(class=`${blockName}__header-title`)
           | № 
-          input(class=roomNumberClass, size='2', readonly,
+          input(class=`${blockName}__header-room-number`, size='2', readonly,
             name='room-number', value=roomNumber)
           if (roomIsLuxury)
-            span(class=roomTypeClass) Люкс
+            span(class=`${blockName}__header-room-type`) Люкс
         span(class=`${blockName}__header-description`)
           span(class=roomPriceClass) #{roomPrice}&#8381;
           |  в сутки
-      div(class=formItemClass.concat(`js-${blockName}__dropdown-date`),
-        data-required=true)
-        +dropdown-date({
-          labelTexts: ['Прибытие', 'Выезд'],
-          inputNames: ['date-arrival', 'date-departure'],
-          minDate: 'today',
-        })
+      div(class=formItemClass, data-required=true)
+        div(class=dropdownDateClass)
+          +dropdown-date({
+            labelTexts: ['Прибытие', 'Выезд'],
+            inputNames: ['date-arrival', 'date-departure'],
+            minDate: 'today',
+          })
       div(class=formItemClass, data-required=true)
         +dropdown-list({
           withButtons: true,
@@ -78,19 +83,19 @@ mixin card-book(options = {})
       div(class=`${blockName}__invoice`)
         div(class=`${blockName}__invoice-item`)
           span(class=`${blockName}__invoice-item-name`)
-            span(class=`js-${blockName}__room-price`) #{roomPrice}&#8381;
+            span(class=roomPriceClass) #{roomPrice}&#8381;
             |  x 
-            span(class=`js-${blockName}__room-days`) 0 суток
-          span(class=`js-${blockName}__room-price-total`) 0&#8381;
+            span(class=roomDaysClass) 0 суток
+          span(class=roomPriceTotalClass) 0&#8381;
         div(class=`${blockName}__invoice-item`)
           span(class=`${blockName}__invoice-item-name`)
             | Сбор за услуги: скидка 
-            span(class=`js-${blockName}__discount`) #{discountPrice}&#8381;
+            span(class=discountClass) #{discountPrice}&#8381;
           span(class=`${blockName}__invoice-item-info`)
             +button-info({
               infoText: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
             })
-          span(class=`js-${blockName}__service-price`) #{servicePrice}&#8381;
+          span(class=servicePriceClass) #{servicePrice}&#8381;
         div(class=`${blockName}__invoice-item`)
           span(class=`${blockName}__invoice-item-name`)
             | Сбор за дополнительные услуги
@@ -98,10 +103,10 @@ mixin card-book(options = {})
             +button-info({
               infoText: 'Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.'
             })
-          span(class=`js-${blockName}__addservice-price`) #{addServicePrice}&#8381;
+          span(class=addServicePriceClass) #{addServicePrice}&#8381;
         div(class=`${blockName}__invoice-total`)
           | Итого
           span(class=`${blockName}__invoice-total-dots`)
-          span(class=`js-${blockName}__total-price`) 0&#8381;
+          span(class=totalPriceClass) 0&#8381;
       div(class=`${blockName}__form-button`)
         +button({ buttonType: 'submit', buttonText: 'Забронировать', withArrow: true })
