--- a/source/blocks/carousel/carousel.pug
+++ b/source/blocks/carousel/carousel.pug
@@ -2,19 +2,21 @@ mixin carousel({ imgSrcList = [] } = {})
   -
     const blockName = 'carousel';
     const wrapperClass = [blockName, `js-${blockName}`];
+    const imagesClass = [`${blockName}__images`, `js-${blockName}__images`];
     const imageClass = [`${blockName}__image`, `js-${blockName}__image`];
     const prevButtonClass = [`${blockName}__button`, `${blockName}__button_prev`, `js-${blockName}__button_prev`];
     const nextButtonClass = [`${blockName}__button`, `${blockName}__button_next`, `js-${blockName}__button_next`];
+    const indicatorsClass = [`${blockName}__indicators`, `js-${blockName}__indicators`];
     const indicatorClass = [`${blockName}__indicator`, `js-${blockName}__indicator`];
 
   div(class=wrapperClass)
-    div(class=`${blockName}__images js-${blockName}__images`)
+    div(class=imagesClass)
       each imgSrc, index in imgSrcList
         img(class=imageClass, src=imgSrc, alt=`Image ${index + 1}`)
     button(class=prevButtonClass, type='button')
       i.material-icons expand_more
     button(class=nextButtonClass, type='button')
       i.material-icons expand_more
-    div(class=`${blockName}__indicators js-${blockName}__indicators`)
+    div(class=indicatorsClass)
       each imgSrc, index in imgSrcList
         span(class=indicatorClass, data-image=index)
