--- a/source/blocks/header/header.pug
+++ b/source/blocks/header/header.pug
@@ -14,11 +14,11 @@ mixin header(options = {})
     const wrapperClass = [blockName, `js-${blockName}`];
     const navbarButtonClass = [`${blockName}__navbar-button`, `js-${blockName}__navbar-button`];
     const navbarClass = [`${blockName}__navbar`, `js-${blockName}__navbar`];
-    const dropdownClass = [`${blockName}__navbar-list-item`, `js-${blockName}__dropdown`];
-    const dropdownTitleClass = [`${blockName}__navbar-link`, `js-${blockName}__dropdown-title`];
+    const navbarLinkClass = [`${blockName}__navbar-link`];
+    const dropdownClass = [`${blockName}__dropdown`, `js-${blockName}__dropdown`];
+    const dropdownTitleClass = [`${blockName}__dropdown-title`, `js-${blockName}__dropdown-title`];
     const dropdownIconClass = ['material-icons', `${blockName}__dropdown-icon`, `js-${blockName}__dropdown-icon`];
     const dropdownListClass = [`${blockName}__dropdown-list`, `js-${blockName}__dropdown-list`];
-    const navbarLinkClass = [`${blockName}__navbar-link`];
 
   header(class=wrapperClass)
     div(class=`${blockName}__container`)
@@ -30,19 +30,18 @@ mixin header(options = {})
       nav(class=navbarClass)
         ul(class=`${blockName}__navbar-list`)
           each item in navbarList
-            if (!item.dropdownList)
-              li(class=`${blockName}__navbar-list-item`)
+            li(class=`${blockName}__navbar-list-item`)
+              if (!item.dropdownList)
                 - const itemClass = navbarLinkClass.concat(item.bold && `${blockName}__navbar-link_bold`);
                 a(class=itemClass, href=item.href) #{item.text}
-            else
-              li(class=dropdownClass)
-                - const itemClass = dropdownTitleClass.concat(item.bold && `${blockName}__navbar-link_bold`);
-                span(class=itemClass, tabindex=0) #{item.text}
-                  i(class=dropdownIconClass) expand_more
-                ul(class=dropdownListClass)
-                  each dropdownItem in item.dropdownList
-                    li(class=`${blockName}__dropdown-list-item`)
-                      a(class=navbarLinkClass, href=dropdownItem.href) #{dropdownItem.text}
+              else
+                span(class=dropdownClass)
+                  span(class=dropdownTitleClass, tabindex=0) #{item.text}
+                    i(class=dropdownIconClass) expand_more
+                  ul(class=dropdownListClass)
+                    each dropdownItem in item.dropdownList
+                      li(class=`${blockName}__dropdown-list-item`)
+                        a(class=navbarLinkClass, href=dropdownItem.href) #{dropdownItem.text}
         if (!loggedIn)
           div(class=`${blockName}__buttons`)
             span(class=`${blockName}__button`)
