--- a/source/blocks/chart-circle/chart-circle.scss
+++ b/source/blocks/chart-circle/chart-circle.scss
@@ -12,11 +12,11 @@ $colors_chart-circle: url('#grad1'), url('#grad2'),
     position: relative;
     width: min-content;
     height: min-content;
+    transform: translate(-0.5rem, -0.5rem);
   }
 
   &__svg {
     height: 13rem;
-    margin: -0.5rem;
     transform: rotate(90deg) scale(-1, 1);
   }
 
@@ -71,7 +71,8 @@ $colors_chart-circle: url('#grad1'), url('#grad2'),
   }
 
   &__legend {
-    margin-left: 3rem;
+    margin-left: 2rem;
+    margin-bottom: 1rem;
     list-style: none;
     color: $color_main-75;
     line-height: 2.4rem;
