Improve naming of images (#26)

--- a/source/pages/ui-kit/form-elements/form-elements.pug
+++ b/source/pages/ui-kit/form-elements/form-elements.pug
@@ -262,7 +262,7 @@ block content
       .form-elements__comment.js-form-elements__comment
         +comment({
           userName: 'Мурад сарафанов',
-          userPicture: 'comment__picture_male-1.png',
+          userPicture: 'comment-picture-male-1.png',
           date: '5 дней назад',
           likeCount: 12,
           likeActive: true,
