--- a/source/pages/ui-kit/index/index.scss
+++ b/source/pages/ui-kit/index/index.scss
@@ -5,7 +5,7 @@
   max-width: 1440px;
   margin: auto;
   padding: 14.3rem 14.1rem 14rem;
-  background: url('./img/ui-kit__logo.svg')
+  background: url('./img/ui-kit-logo.svg')
     3rem 3rem/4.8rem 4.8rem no-repeat;
 
   &__title {
