--- a/source/pages/website/room-details/room-details.pug
+++ b/source/pages/website/room-details/room-details.pug
@@ -2,7 +2,7 @@ extends ../_layout.pug
 
 block append variables
   - const pageTitle = 'Room Details'
-  - const roomImgSrcList = ['./img/888_1.png', './img/888_2.png', './img/888_3.png']
+  - const roomImgSrcList = ['./img/room-888-1.png', './img/room-888-2.png', './img/room-888-3.png']
 
 block append mixins
   include /blocks/list-feature/list-feature.pug
