--- a/source/blocks/comment/comment.pug
+++ b/source/blocks/comment/comment.pug
@@ -4,7 +4,7 @@ mixin comment(options = {})
   -
     const {
       userName = '',
-      userPicture = 'comment__picture_default.png',
+      userPicture = 'comment-picture-default.png',
       date = '',
       text = '',
       likeCount = 0,
