--- a/source/pages/ui-kit/cards/cards.scss
+++ b/source/pages/ui-kit/cards/cards.scss
@@ -7,7 +7,7 @@
   max-width: 1440px;
   margin: auto;
   padding: 15rem 14rem 14rem;
-  background: #F4F4F6 url('./img/ui-kit__logo.svg')
+  background: #F4F4F6 url('./img/ui-kit-logo.svg')
     3rem 3rem/4.8rem 4.8rem no-repeat;
 
   &__column {
