--- a/source/pages/ui-kit/headers-footers/headers-footers.scss
+++ b/source/pages/ui-kit/headers-footers/headers-footers.scss
@@ -3,7 +3,7 @@
   max-width: 1440px;
   margin: auto;
   padding: 14rem 0 13rem;
-  background: #F4F4F6 url('./img/ui-kit__logo.svg')
+  background: #F4F4F6 url('./img/ui-kit-logo.svg')
     3rem 3rem/4.8rem 4.8rem no-repeat;
 
   &__item {
